--- a/taa/.circleci/config.yml
+++ b/taa/.circleci/config.yml
@@ -71,10 +71,13 @@ jobs:
           command: curl https://cli-assets.heroku.com/install.sh | sh
       - run:
           name: set heroku app
-          command: heroku git:remote -a plague-inc
+          command: heroku git:remote -a $HEROKU_APP_NAME
       - run:
           name: Heroku docker login
           command: heroku container:login
       - run:
           name: Release
           command: make release
+      - run:
+          name: Migrate
+          command: heroku run rake db:migrate
