--- a/rails_gem/.circleci/config.yml
+++ b/rails_gem/.circleci/config.yml
@@ -7,8 +7,12 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - checks:
+          filters:
+            tags:
+              only: /.*/
       - build-and-release:
-          requires: [test]
+          requires: [test, checks]
           filters:
             tags:
               only: /\d+\.\d+\.\d+/
@@ -18,7 +22,7 @@ workflows:
 jobs:
   test:
     docker:
-      - image: darthjee/circleci_ruby_gems:0.5.4
+      - image: darthjee/circleci_rails_gems:0.6.0
         environment:
           PROJECT: stalchild
     steps:
@@ -33,11 +37,21 @@ jobs:
           name: RSpec
           command: bundle exec rspec
       - run:
-          name: Rubocop
-          command: rubocop
-      - run:
           name: Coverage Test Report
           command: cc-test-reporter after-build --exit-code $?
+  checks:
+    docker:
+      - image: darthjee/circleci_rails_gems:0.6.0
+        environment:
+          PROJECT: stalchild
+    steps:
+      - checkout
+      - run:
+          name: Bundle Install
+          command: bundle install
+      - run:
+          name: Rubocop
+          command: rubocop
       - run:
           name: Yardstick coverage check
           command: bundle exec rake verify_measurements
@@ -52,7 +66,7 @@ jobs:
           command: check_specs
   build-and-release:
     docker:
-      - image: darthjee/circleci_ruby_gems:0.5.4
+      - image: darthjee/circleci_rails_gems:0.5.4
         environment:
           PROJECT: stalchild
     steps:
