--- a/taa/source/Gemfile
+++ b/taa/source/Gemfile
@@ -8,12 +8,12 @@ ruby '2.5.0'
 gem 'bundler', '~> 1.16.1'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '5.2.4.2'
+gem 'rails', '5.2.4.3'
 
 # Use pg as the database for Active Record
 gem 'mysql2'
 # Use Puma as the app server
-gem 'puma', '~> 4.3.3'
+gem 'puma', '~> 4.3.5'
 # Use SCSS for stylesheets
 gem 'sass-rails', '5.1.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -34,17 +34,18 @@ gem 'jbuilder', '~> 2.5'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
-gem 'arstotzka',    '1.5.0'
-gem 'azeroth',      '>= 0.7.0'
+gem 'arstotzka',    '~> 1.6.1'
+gem 'azeroth',      '>= 0.7.1'
 gem 'bower-rails',  '~> 0.12.0'
 gem 'newrelic_rpm', '~> 6.8.0.360'
 gem 'nokogiri',     '1.10.9'
 gem 'rake',         '13.0.1'
-gem 'sinclair',     '1.6.5'
-gem 'tarquinn',     '0.1.0'
+gem 'sinclair',     '~> 1.6.7'
+gem 'tarquinn',     '~> 0.1.0'
 gem 'turbolinks',   '5.2.1'
 
 gem 'darthjee-core_ext', '>= 2.0.0'
+gem 'magicka', '~> 0.5.2'
 
 group :development do
   # Access an interactive console on exception pages
