--- a/taa/.circleci/config.yml
+++ b/taa/.circleci/config.yml
@@ -7,8 +7,12 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - checks:
+          filters:
+            tags:
+              only: /.*/
       - build-and-release:
-          requires: [test]
+          requires: [test, checks]
           filters:
             tags:
               only: /.*/
@@ -18,20 +22,20 @@ workflows:
 jobs:
   test:
     docker:
-      - image: darthjee/circleci_stalchild-base:0.0.1
+      - image: darthjee/circleci_taa-base:0.0.1
         environment:
-          STALCHILD_MYSQL_HOST: mysql
-          STALCHILD_MYSQL_PORT: 3306
-          STALCHILD_MYSQL_USER: stalchild
-          STALCHILD_MYSQL_NAME: stalchild
-          STALCHILD_MYSQL_PASSWORD: stalchild
-          STALCHILD_PASSWORD_SALT: abcd
+          TAA_MYSQL_HOST: mysql
+          TAA_MYSQL_PORT: 3306
+          TAA_MYSQL_USER: taa
+          TAA_MYSQL_NAME: taa
+          TAA_MYSQL_PASSWORD: taa
+          TAA_PASSWORD_SALT: abcd
       - image: circleci/mysql:5.7
         name: mysql
         environment:
-          MYSQL_DATABASE: stalchild_test
-          MYSQL_USER: stalchild
-          MYSQL_PASSWORD: stalchild
+          MYSQL_DATABASE: taa_test
+          MYSQL_USER: taa
+          MYSQL_PASSWORD: taa
     steps:
       - checkout
       - run:
@@ -47,9 +51,6 @@ jobs:
           name: Bower Install
           command: bundle exec rake bower:install
       - run:
-          name: Rubocop
-          command: rubocop
-      - run:
           name: Wait for database
           command: scripts/wait_for_db.sh
       - run:
@@ -61,6 +62,34 @@ jobs:
       - run:
           name: Coverage Test Report
           command: cc-test-reporter after-build --exit-code $?
+
+  checks:
+    docker:
+      - image: darthjee/circleci_taa-base:0.0.1
+        environment:
+          TAA_MYSQL_HOST: mysql
+          TAA_MYSQL_PORT: 3306
+          TAA_MYSQL_USER: taa
+          TAA_MYSQL_NAME: taa
+          TAA_MYSQL_PASSWORD: taa
+          TAA_PASSWORD_SALT: abcd
+      - image: circleci/mysql:5.7
+        name: mysql
+        environment:
+          MYSQL_DATABASE: taa_test
+          MYSQL_USER: taa
+          MYSQL_PASSWORD: taa
+    steps:
+      - checkout
+      - run:
+          name: Set folder
+          command: cp source/* source/.??* ./ -r; rm source -rf
+      - run:
+          name: Bundle Install
+          command: bundle install
+      - run:
+          name: Rubocop
+          command: rubocop
   build-and-release:
     machine: true
     steps:
@@ -86,3 +115,6 @@ jobs:
       - run:
           name: Migrate
           command: scripts/release.sh migrate
+      - run:
+          name: Populate fields
+          command: scripts/release.sh populate
