--- a/taa/docker-compose.yml
+++ b/taa/docker-compose.yml
@@ -66,11 +66,6 @@ services:
     command: /bin/bash
     depends_on: [base_build]
   stalchild_production:
-    depends_on: [production_base_build, stalchild_mysql]
+    env_file: .env.production
     container_name: stalchild_production
-    image: darthjee/production_stalchild
-    links:
-      - stalchild_mysql:mysql
-    env_file: .env
-    environment:
-      RAILS_ENV: production
+    image: $PRODUCTION_IMAGE
