--- a/taa/.circleci/config.yml
+++ b/taa/.circleci/config.yml
@@ -22,20 +22,20 @@ workflows:
 jobs:
   test:
     docker:
-      - image: darthjee/circleci_taa-base:0.0.1
+      - image: darthjee/circleci_stalchild-base:0.0.1
         environment:
-          TAA_MYSQL_HOST: mysql
-          TAA_MYSQL_PORT: 3306
-          TAA_MYSQL_USER: taa
-          TAA_MYSQL_NAME: taa
-          TAA_MYSQL_PASSWORD: taa
-          TAA_PASSWORD_SALT: abcd
+          STALCHILD_MYSQL_HOST: mysql
+          STALCHILD_MYSQL_PORT: 3306
+          STALCHILD_MYSQL_USER: stalchild
+          STALCHILD_MYSQL_NAME: stalchild
+          STALCHILD_MYSQL_PASSWORD: stalchild
+          STALCHILD_PASSWORD_SALT: abcd
       - image: circleci/mysql:5.7
         name: mysql
         environment:
-          MYSQL_DATABASE: taa_test
-          MYSQL_USER: taa
-          MYSQL_PASSWORD: taa
+          MYSQL_DATABASE: stalchild_test
+          MYSQL_USER: stalchild
+          MYSQL_PASSWORD: stalchild
     steps:
       - checkout
       - run:
@@ -65,20 +65,20 @@ jobs:
 
   checks:
     docker:
-      - image: darthjee/circleci_taa-base:0.0.1
+      - image: darthjee/circleci_stalchild-base:0.0.1
         environment:
-          TAA_MYSQL_HOST: mysql
-          TAA_MYSQL_PORT: 3306
-          TAA_MYSQL_USER: taa
-          TAA_MYSQL_NAME: taa
-          TAA_MYSQL_PASSWORD: taa
-          TAA_PASSWORD_SALT: abcd
+          STALCHILD_MYSQL_HOST: mysql
+          STALCHILD_MYSQL_PORT: 3306
+          STALCHILD_MYSQL_USER: stalchild
+          STALCHILD_MYSQL_NAME: stalchild
+          STALCHILD_MYSQL_PASSWORD: stalchild
+          STALCHILD_PASSWORD_SALT: abcd
       - image: circleci/mysql:5.7
         name: mysql
         environment:
-          MYSQL_DATABASE: taa_test
-          MYSQL_USER: taa
-          MYSQL_PASSWORD: taa
+          MYSQL_DATABASE: stalchild_test
+          MYSQL_USER: stalchild
+          MYSQL_PASSWORD: stalchild
     steps:
       - checkout
       - run:
