--- a/taa/Dockerfile.stalchild
+++ b/taa/Dockerfile.stalchild
@@ -1,10 +1,29 @@
-FROM darthjee/stalchild-base:0.0.1
+FROM darthjee/production_stalchild-base:0.0.1 as base
 
-WORKDIR /home/app/app
-COPY --chown=app:app source/Gemfile* /home/app/app/
-COPY --chown=app:app source/bower.json /home/app/app/
+####################################
 
-RUN bundle install --clean
+FROM base as builder
 
-USER app
-RUN bower install
+COPY --chown=app:app ./source/ /home/app/app/
+
+RUN bundle install --clean --without development test;
+
+RUN rm /home/app/app/config/credentials.yml.enc -f
+RUN rm /home/app/app/config/master.key -f
+RUN rm /home/app/app/public/assets/* -f
+RUN rm /home/app/app/spec -rf
+RUN EDITOR=none rails credentials:edit
+RUN rake bower:install
+RUN RAILS_ENV=production rails assets:precompile
+RUN rm /home/app/app/assets -rf
+RUN rm /home/app/app/vendor/assets -rf
+RUN rm /home/app/app/log/* -f
+RUN rm /home/app/app/tmp/* -rf
+
+##################################
+
+FROM base
+
+COPY --chown=app:app --from=builder /home/app/app/ /home/app/app/
+
+RUN bundle install --clean --without development test
