--- a/taau/docker-compose.yml
+++ b/taau/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3'
 services:
+  dev_stalchild_mysql:
+    image: mysql:5.7
+    container_name: dev_stalchild_mysql
+    env_file: .env.dev
+    environment:
+      MYSQL_ROOT_PASSWORD: stalchild
+    ports:
+      - 127.0.0.1:$DEV_STALCHILD_MYSQL_PORT:3306
+
   stalchild_mysql:
     image: mysql:5.7
     container_name: stalchild_mysql
@@ -7,36 +16,37 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: stalchild
     ports:
-      - 127.0.0.1:$STALCHILD_MYSQL_PORT:3306
+      - 127.0.0.1:$LOCAL_STALCHILD_MYSQL_PORT:3306
+    volumes:
+      - ./mysql:/var/lib/mysql
+
 
   #################### Base  ####################
 
   base: &base
-    image: darthjee/stalchild
+    image: darthjee/dev_stalchild
     volumes:
       - ./source:/home/app/app
     links:
-      - stalchild_mysql:mysql
-    env_file: .env
+      - dev_stalchild_mysql:mysql
+    env_file: .env.dev
 
 
   base_build:
     <<: *base
     build:
       context: .
-      dockerfile: Dockerfile.stalchild
+      dockerfile: Dockerfile.dev_stalchild
     command: echo done
 
   production_base_build:
     image: darthjee/production_stalchild
-    env_file: .env
+    env_file: .env.dev
     environment:
       RAILS_ENV: production
     build:
       context: .
       dockerfile: Dockerfile.production_stalchild
-    links:
-      - stalchild_mysql:mysql
     command: echo done
   #################### CONTAINERS ####################
 
@@ -65,7 +75,15 @@ services:
     container_name: stalchild_root
     command: /bin/bash
     depends_on: [base_build]
+
   stalchild_production:
     env_file: .env.production
     container_name: stalchild_production
     image: $PRODUCTION_IMAGE
+
+  stalchild:
+    env_file: .env
+    container_name: stalchild
+    image: darthjee/stalchild
+    links:
+      - stalchild_mysql:mysql
