--- a/taa/source/Gemfile
+++ b/taa/source/Gemfile
@@ -3,9 +3,9 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.5.0'
+ruby '2.7.0'
 
-gem 'bundler', '~> 1.16.1'
+gem 'bundler', '2.3.20'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '5.2.6'
