--- a/taa/source/Gemfile
+++ b/taa/source/Gemfile
@@ -3,19 +3,19 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.5.0'
+ruby '2.7.0'
 
-gem 'bundler', '~> 1.16.1'
+gem 'bundler', '2.3.20'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '5.2.6'
+gem 'rails', '5.2.8.1'
 
 # Use pg as the database for Active Record
 gem 'mysql2'
 # Use Puma as the app server
 gem 'puma', '~> 4.3.8'
 # Use SCSS for stylesheets
-gem 'sass-rails', '5.1.0'
+gem 'sass-rails', '6.0.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '4.2.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
@@ -39,8 +39,8 @@ gem 'azeroth',      '>= 0.8.1'
 gem 'bower-rails',  '~> 0.12.0'
 gem 'magicka',      '~> 0.6.0'
 gem 'newrelic_rpm', '~> 6.9.0.363'
-gem 'nokogiri',     '1.12.5'
-gem 'rake',         '13.0.3'
+gem 'nokogiri',     '1.13.6'
+gem 'rake',         '13.0.6'
 gem 'sinclair',     '~> 1.6.7'
 gem 'tarquinn',     '~> 0.2.0'
 gem 'turbolinks',   '5.2.1'
@@ -56,23 +56,23 @@ group :development do
   gem 'web-console',           '3.7.0'
 
   gem 'bundler-audit',         '0.6.1'
-  gem 'factory_bot',           '5.1.1'
-  gem 'pry',                   '0.12.2'
-  gem 'pry-nav',               '0.3.0'
+  gem 'factory_bot',           '6.2.1'
+  gem 'pry',                   '0.14.1'
+  gem 'pry-nav',               '1.0.0'
   gem 'pry-rails',             '0.3.9'
   gem 'reek',                  '6.0.3'
-  gem 'rspec',                 '3.9.0'
-  gem 'rspec-core',            '3.9.3'
-  gem 'rspec-expectations',    '3.9.4'
-  gem 'rspec-mocks',           '3.9.1'
-  gem 'rspec-rails',           '3.9.0'
-  gem 'rspec-support',         '3.9.4'
+  gem 'rspec',                 '3.11.0'
+  gem 'rspec-core',            '3.11.0'
+  gem 'rspec-expectations',    '3.11.0'
+  gem 'rspec-mocks',           '3.11.1'
+  gem 'rspec-rails',           '5.1.2'
+  gem 'rspec-support',         '3.11.0'
   gem 'rubocop',               '0.80.1'
   gem 'rubocop-rspec',         '1.38.1'
-  gem 'rubycritic',            '4.6.1'
+  gem 'rubycritic',            '4.7.0'
   gem 'shoulda-matchers',      '4.3.0'
-  gem 'simplecov',             '0.17.1'
-  gem 'yard',                  '0.9.26'
+  gem 'simplecov',             '0.21.2'
+  gem 'yard',                  '0.9.27'
   gem 'yardstick',             '0.9.9'
   gem 'zonebie',               '0.6.1'
 end
@@ -80,7 +80,7 @@ end
 group :development, :test do
   gem 'timecop', '0.9.1'
 
-  gem 'rails-controller-testing', '1.0.4'
+  gem 'rails-controller-testing', '1.0.5'
 end
 
 group :test do
