Use main as master

--- a/gem/.circleci/config.yml
+++ b/gem/.circleci/config.yml
@@ -14,7 +14,7 @@ workflows:
               only: /\d+\.\d+\.\d+/
             branches:
               only:
-                - master
+                - main
 jobs:
   test:
     docker:
