--- a/taa/Dockerfile.production_stalchild
+++ b/taa/Dockerfile.production_stalchild
@@ -6,11 +6,11 @@ FROM base as builder
 
 COPY --chown=app:app ./source/ /home/app/app/
 
-RUN bundle install --clean --without development test;
+RUN bundle install --without development test;
 
 RUN rm /home/app/app/config/master.key -f
 RUN rm /home/app/app/config/credentials.yml.enc -f
-RUN rm /home/app/app/public/assets/* -f
+RUN rm /home/app/app/public/assets/* -rf
 RUN rm /home/app/app/spec -rf
 RUN EDITOR=none rails credentials:edit
 RUN rake bower:install
@@ -26,4 +26,4 @@ FROM base
 
 COPY --chown=app:app --from=builder /home/app/app/ /home/app/app/
 
-RUN bundle install --clean --without development test
+RUN bundle install --without development test
