--- a/taa/source/Gemfile
+++ b/taa/source/Gemfile
@@ -5,7 +5,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '2.7.0'
 
-gem 'bundler', '2.3.20'
+gem 'bundler', '2.3.25'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '5.2.8.1'
@@ -22,7 +22,9 @@ gem 'uglifier', '4.2.0'
 # gem 'mini_racer', platforms: :ruby
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
+gem 'coffee-rails', '4.2.2'
 gem 'jbuilder', '~> 2.5'
+gem 'jquery-rails', '4.3.1'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
@@ -35,17 +37,27 @@ gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
 
 gem 'arstotzka',    '~> 1.6.2'
-gem 'azeroth',      '>= 0.8.1'
+gem 'azeroth',      '>= 0.10.1'
 gem 'bower-rails',  '~> 0.12.0'
-gem 'magicka',      '~> 0.6.0'
-gem 'newrelic_rpm', '~> 6.9.0.363'
-gem 'nokogiri',     '1.13.6'
+gem 'newrelic_rpm', '~> 8.12.0'
+gem 'nokogiri',     '1.13.10'
+gem 'rack',         '~> 2.x'
 gem 'rake',         '13.0.6'
-gem 'sinclair',     '~> 1.6.7'
+gem 'sinclair',     '~> 1.8.0'
+gem 'sprockets',    '~> 3.x'
 gem 'tarquinn',     '~> 0.2.0'
 gem 'turbolinks',   '5.2.1'
+gem 'tzinfo-data'
 
+gem 'darthjee-active_ext', '>= 1.3.2'
 gem 'darthjee-core_ext', '>= 2.0.0'
+gem 'magicka', '~> 0.6.0'
+
+gem 'mini_magick'
+gem 'recursive-open-struct'
+gem 'rollbar'
+gem 'rqrcode_png'
+gem 'sentry-raven'
 
 group :development do
   # Access an interactive console on exception pages
@@ -55,8 +67,6 @@ group :development do
   gem 'spring-watcher-listen', '2.0.1'
   gem 'web-console',           '3.7.0'
 
-  gem 'bundler-audit',         '0.6.1'
-  gem 'factory_bot',           '6.2.1'
   gem 'pry',                   '0.14.1'
   gem 'pry-nav',               '1.0.0'
   gem 'pry-rails',             '0.3.9'
@@ -74,11 +84,12 @@ group :development do
   gem 'simplecov',             '0.21.2'
   gem 'yard',                  '0.9.27'
   gem 'yardstick',             '0.9.9'
-  gem 'zonebie',               '0.6.1'
 end
 
 group :development, :test do
-  gem 'timecop', '0.9.1'
+  gem 'factory_bot',  '6.2.1'
+  gem 'timecop',      '0.9.1'
+  gem 'zonebie',      '0.6.1'
 
   gem 'rails-controller-testing', '1.0.5'
 end
