--- a/taau/Dockerfile.circleci_stalchild-base
+++ b/taau/Dockerfile.circleci_stalchild-base
@@ -1,7 +1,11 @@
-FROM darthjee/circleci_taa:0.9.0 as base
-FROM darthjee/scripts:0.1.8 as scripts
+FROM darthjee/scripts:0.3.1 as scripts
+FROM darthjee/circleci_taa:1.2.1 as base
 
 ######################################
+
+USER root
+RUN apt-get update && apt-get install -y default-libmysqld-dev
+USER circleci
 
 FROM base as builder
 
