--- a/taau/Dockerfile.stalchild
+++ b/taau/Dockerfile.stalchild
@@ -1,29 +1,10 @@
-FROM darthjee/production_stalchild-base:0.0.1 as base
+FROM darthjee/stalchild-base:0.0.1
 
-####################################
+WORKDIR /home/app/app
+COPY --chown=app:app source/Gemfile* /home/app/app/
+COPY --chown=app:app source/bower.json /home/app/app/
 
-FROM base as builder
+RUN bundle install
 
-COPY --chown=app:app ./source/ /home/app/app/
-
-RUN bundle install --clean --without development test;
-
-RUN rm /home/app/app/config/credentials.yml.enc -f
-RUN rm /home/app/app/config/master.key -f
-RUN rm /home/app/app/public/assets/* -f
-RUN rm /home/app/app/spec -rf
-RUN EDITOR=none rails credentials:edit
-RUN rake bower:install
-RUN RAILS_ENV=production rails assets:precompile
-RUN rm /home/app/app/assets -rf
-RUN rm /home/app/app/vendor/assets -rf
-RUN rm /home/app/app/log/* -f
-RUN rm /home/app/app/tmp/* -rf
-
-##################################
-
-FROM base
-
-COPY --chown=app:app --from=builder /home/app/app/ /home/app/app/
-
-RUN bundle install --clean --without development test
+USER app
+RUN bower install
