--- a/taau/.circleci/config.yml
+++ b/taau/.circleci/config.yml
@@ -30,9 +30,6 @@ jobs:
           STALCHILD_MYSQL_NAME: stalchild
           STALCHILD_MYSQL_PASSWORD: stalchild
           STALCHILD_PASSWORD_SALT: abcd
-          STALCHILD_REDIS_URL: redis://redis:6379/0
-      - image: circleci/redis:latest
-        name: redis
       - image: circleci/mysql:5.7
         name: mysql
         environment:
@@ -98,26 +95,5 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Make Build
-          command: scripts/release.sh build
-      - run:
-          name: Install Heroku
-          command: scripts/release.sh install
-      - run:
-          name: set heroku app
-          command: scripts/release.sh set-app
-      - run:
-          name: Heroku docker login
-          command: scripts/release.sh signin
-      - run:
-          name: Build heroku image
-          command: scripts/release.sh build-heroku
-      - run:
-          name: Release
-          command: scripts/release.sh release
-      - run:
-          name: Migrate
-          command: scripts/release.sh migrate
-      - run:
-          name: Populate fields
-          command: scripts/release.sh populate
+          name: Trigger Deploy
+          command: scripts/deploy.sh deploy
