--- a/taau/.circleci/config.yml
+++ b/taau/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - checkout
       - run:
           name: Set folder
-          command: cp source/* source/.??* ./ -r; rm source -rf; rm -rf old_source
+          command: cp source/* source/.??* ./ -r; rm source -rf
       - run:
           name: Prepare Coverage Test Report
           command: cc-test-reporter before-build
@@ -83,7 +83,7 @@ jobs:
       - checkout
       - run:
           name: Set folder
-          command: cp source/* source/.??* ./ -r; rm source -rf; rm -rf old_source
+          command: cp source/* source/.??* ./ -r; rm source -rf
       - run:
           name: Bundle Install
           command: bundle install
