--- a/taau/.circleci/config.yml
+++ b/taau/.circleci/config.yml
@@ -49,19 +49,19 @@ jobs:
           command: bundle install
       - run:
           name: Bower Install
-          command: rake bower:install
+          command: bundle exec rake bower:install
       - run:
           name: Wait for database
           command: scripts/wait_for_db.sh
       - run:
           name: Migrate
-          command: RAILS_ENV=test rake db:schema:load
+          command: RAILS_ENV=test bundle exec rake db:schema:load
       - run:
           name: RSpec
-          command: rspec
+          command: bundle exec rspec
       - run:
           name: Coverage Test Report
-          command: cc-test-reporter after-build -t simplecov --exit-code $?
+          command: cc-test-reporter after-build --exit-code $?
 
   checks:
     docker:
