Add disabled cops

--- a/taau/source/.rubocop_todo.yml
+++ b/taau/source/.rubocop_todo.yml
@@ -25,3 +25,68 @@ Metrics/PerceivedComplexity:
 # Configuration parameters: AllowedGroups.
 RSpec/NestedGroups:
   Max: 4
+
+Style/SuperWithArgsParentheses: # new in 1.58
+  Enabled: false
+Style/YAMLFileRead: # new in 1.53
+  Enabled: false
+Capybara/ClickLinkOrButtonStyle: # new in 2.19
+  Enabled: false
+Capybara/RedundantWithinFind: # new in 2.20
+  Enabled: false
+Capybara/RSpec/HaveSelector: # new in 2.19
+  Enabled: false
+Capybara/RSpec/PredicateMatcher: # new in 2.19
+  Enabled: false
+FactoryBot/ExcessiveCreateList: # new in 2.25
+  Enabled: false
+FactoryBot/IdSequence: # new in 2.24
+  Enabled: false
+RSpecRails/NegationBeValid: # new in 2.23
+  Enabled: false
+RSpec/EmptyMetadata: # new in 2.24
+  Enabled: false
+RSpec/EmptyOutput: # new in 2.29
+  Enabled: false
+RSpec/Eq: # new in 2.24
+  Enabled: false
+RSpec/IsExpectedSpecify: # new in 2.27
+  Enabled: false
+RSpec/MetadataStyle: # new in 2.24
+  Enabled: false
+RSpec/ReceiveMessages: # new in 2.23
+  Enabled: false
+RSpec/RedundantPredicateMatcher: # new in 2.26
+  Enabled: false
+RSpec/RemoveConst: # new in 2.26
+  Enabled: false
+RSpec/RepeatedSubjectCall: # new in 2.27
+  Enabled: false
+RSpec/SpecFilePathFormat: # new in 2.24
+  Enabled: false
+RSpec/SpecFilePathSuffix: # new in 2.24
+  Enabled: false
+RSpec/UndescriptiveLiteralsDescription: # new in 2.29
+  Enabled: false
+Lint/ItWithoutArgumentsInBlock: # new in 1.59
+  Enabled: false
+Lint/LiteralAssignmentInCondition: # new in 1.58
+  Enabled: false
+Lint/MixedCaseRange: # new in 1.53
+  Enabled: false
+Lint/RedundantRegexpQuantifiers: # new in 1.53
+  Enabled: false
+Style/RedundantArrayConstructor: # new in 1.52
+  Enabled: false
+Style/RedundantCurrentDirectoryInPath: # new in 1.53
+  Enabled: false
+Style/RedundantFilterChain: # new in 1.52
+  Enabled: false
+Style/RedundantRegexpArgument: # new in 1.53
+  Enabled: false
+Style/RedundantRegexpConstructor: # new in 1.52
+  Enabled: false
+Style/ReturnNilInPredicateMethodDefinition: # new in 1.53
+  Enabled: false
+Style/SingleLineDoEndBlock: # new in 1.57
+  Enabled: false
