--- a/taau/source/.rubocop.yml
+++ b/taau/source/.rubocop.yml
@@ -377,19 +377,19 @@ RSpec/SubjectDeclaration:
 RSpec/VerifiedDoubleReference:
   Enabled: true
 
-RSpec/Rails/AvoidSetupHook:
+RSpecRails/AvoidSetupHook:
   Enabled: true
 
-RSpec/Rails/HaveHttpStatus:
+RSpecRails/HaveHttpStatus:
   Enabled: true
 
-RSpec/Rails/InferredSpecType:
+RSpecRails/InferredSpecType:
   Enabled: true
 
-RSpec/Rails/MinitestAssertions:
+RSpecRails/MinitestAssertions:
   Enabled: true
 
-RSpec/Rails/TravelAround:
+RSpecRails/TravelAround:
   Enabled: true
 
 RSpec/MultipleMemoizedHelpers:
