--- a/taau/.circleci/config.yml
+++ b/taau/.circleci/config.yml
@@ -45,11 +45,8 @@ jobs:
           name: Prepare Coverage Test Report
           command: cc-test-reporter before-build
       - run:
-          name: Bundle Install
-          command: bundle install
-      - run:
-          name: Bower Install
-          command: bundle exec rake bower:install
+          name: Yarn Install
+          command: yarn install
       - run:
           name: Wait for database
           command: scripts/wait_for_db.sh
