--- a/taau/docker-compose.yml
+++ b/taau/docker-compose.yml
@@ -1,8 +1,16 @@
-version: '3'
 services:
   stalchild_mysql:
     image: mysql:9.3.0
     container_name: stalchild_mysql
+    env_file: .env
+    environment:
+      MYSQL_ROOT_PASSWORD: stalchild
+    ports:
+      - 127.0.0.1:$STALCHILD_MYSQL_PORT:3306
+
+  stalchild_prod_test_mysql:
+    image: mysql:9.3.0
+    container_name: stalchild_prod_test_mysql
     env_file: .env
     environment:
       MYSQL_ROOT_PASSWORD: stalchild
@@ -31,7 +39,7 @@ services:
   stalchild_app:
     <<: *base
     container_name: stalchild_app
-    command: /bin/bash bin/server.sh
+    command: /bin/bash bin/test_server.sh
     depends_on: [base_build]
     ports:
       - 127.0.0.1:3000:3000
@@ -64,3 +72,18 @@ services:
     command: bin/server.sh
     ports:
       - 127.0.0.1:3002:3000
+
+  stalchild_prod_test:
+    env_file: .env
+    container_name: stalchild_production
+    image: darthjee/production_stalchild
+    build:
+      context: .
+      dockerfile: Dockerfile.production_stalchild
+    command: bin/test_server.sh
+    ports:
+      - 127.0.0.1:3002:3000
+    environment:
+      RAILS_ENV: production
+    links:
+      - stalchild_prod_test_mysql:mysql
