Fix rubocop yml

--- a/rails_gem/.rubocop.yml
+++ b/rails_gem/.rubocop.yml
@@ -10,7 +10,7 @@ Metrics/BlockLength:
     - 'spec/**/*_spec.rb'
     - 'spec/dummy/db/schema.rb'
     - 'spec/support/shared_*/**/*.rb'
-    - 'azeroth.gemspec'
+    - 'stalchild.gemspec'
 
 RSpec/NestedGroups:
   Max: 5
